--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 
-<body class="container mx-auto px-4 font-serif">
+<body class="container mx-auto px-4 font-serif bg-gray-100">
 
 
   <div class="flex justify-between mt-1">
@@ -53,7 +53,7 @@
         <form action="aien.php" method="post">
           <div class=" flex mt-4 justify-center">
             <input type="text" name="prompt" placeholder="Article Topic"
-              class="border text-center border-black rounded p-2">
+              class="border text-center border-black rounded p-2 bg-gray-100">
           </div>
           <div class="flex mt-4 justify-center">
             <input type="submit" value="Generate" class="bg-black text-white rounded p-2 hover:bg-slate-600">
@@ -89,7 +89,7 @@
         <form action="ai.php" method="post">
           <div class=" flex mt-4 justify-center">
             <input type="text" name="prompt" placeholder="Topik Artikel"
-              class="border text-center border-black rounded p-2">
+            class="border text-center border-black rounded p-2 bg-gray-100">
           </div>
           <div class="flex mt-4 justify-center">
             <input type="submit" value="Generate" class="bg-black text-white rounded p-2 hover:bg-slate-600">
