added generate image

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,10 @@
             <?= $prompt?>
             Contoh
           </span></h1>
-        <div class="output-text text-sm">
+        <div class="output-text ">
+          <div class="flex justify-center">
+          <img src="/public/head.jpg" style="filter: grayscale(100%); height: 256px; width: 512px; object-fit: cover;"  alt="">
+          </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget sodales dui, sit amet rutrum arcu. Aliquam fermentum vulputate nisl eu accumsan. Phasellus pulvinar viverra augue, sed varius neque laoreet sed. Donec vitae rutrum arcu. Ut porttitor posuere quam, at lobortis mauris placerat sed. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam at malesuada justo. In hac habitasse platea dictumst. Pellentesque elementum augue vel ipsum pharetra eleifend. Curabitur maximus varius risus sit amet tincidunt. Nunc vulputate sem sit amet sagittis dictum. Integer porttitor a tellus eu mattis. Donec nec vehicula risus.
   
                 Nunc risus orci, sagittis ac orci in, consectetur vehicula diam. Morbi libero lectus, eleifend vel dictum a, porta id mi. Pellentesque ac mattis augue. Nulla consequat, augue et vestibulum euismod, massa lectus rhoncus libero, non elementum metus massa ut magna. Fusce laoreet, orci eu eleifend vehicula, tortor justo ultricies elit, a gravida sapien erat elementum justo. Etiam suscipit, felis vel sollicitudin consequat, metus erat laoreet tellus, volutpat consectetur nulla mauris eu diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam vitae sollicitudin magna. Sed imperdiet rhoncus arcu. Cras venenatis, nisl ac ornare maximus, velit lectus lobortis elit, eget scelerisque velit mauris ac nulla. Curabitur id nisi lectus.
@@ -102,7 +105,10 @@
             <?= $prompt?>
             Contoh
           </span></h1>
-          <div class="output-text text-sm">
+          <div class="output-text ">
+            <div class="flex justify-center">
+            <img src="/public/head.jpg" style="filter: grayscale(100%); height: 256px; width: 512px; object-fit: cover;"  alt="">
+            </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget sodales dui, sit amet rutrum arcu. Aliquam fermentum vulputate nisl eu accumsan. Phasellus pulvinar viverra augue, sed varius neque laoreet sed. Donec vitae rutrum arcu. Ut porttitor posuere quam, at lobortis mauris placerat sed. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam at malesuada justo. In hac habitasse platea dictumst. Pellentesque elementum augue vel ipsum pharetra eleifend. Curabitur maximus varius risus sit amet tincidunt. Nunc vulputate sem sit amet sagittis dictum. Integer porttitor a tellus eu mattis. Donec nec vehicula risus.
   
               Nunc risus orci, sagittis ac orci in, consectetur vehicula diam. Morbi libero lectus, eleifend vel dictum a, porta id mi. Pellentesque ac mattis augue. Nulla consequat, augue et vestibulum euismod, massa lectus rhoncus libero, non elementum metus massa ut magna. Fusce laoreet, orci eu eleifend vehicula, tortor justo ultricies elit, a gravida sapien erat elementum justo. Etiam suscipit, felis vel sollicitudin consequat, metus erat laoreet tellus, volutpat consectetur nulla mauris eu diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam vitae sollicitudin magna. Sed imperdiet rhoncus arcu. Cras venenatis, nisl ac ornare maximus, velit lectus lobortis elit, eget scelerisque velit mauris ac nulla. Curabitur id nisi lectus.
